Edited Heroku App Name, added test summary support in CircleCI config

--- a/original-application/webapp/static/index.html
+++ b/original-application/webapp/static/index.html
@@ -92,7 +92,7 @@
       </ul>
     </div>
     <div class="hero">
-      <h1 class="title">InfoTech</h1>
+      <h1 class="title">Hooli</h1>
       <p class="subtitle"><span class="subtitle-question"> {{HEADLINE}}</span>
         <p class="subtitle">{{TAGLINE}}</p>
       </p>
